[gd_scene load_steps=3 format=3 uid="uid://cyo0hom0oira3"]

[ext_resource type="Script" path="res://note_book_handler.gd" id="1_shqoa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgfn8"]

[node name="note_book_handler" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("1_shqoa")

[node name="panel_book" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="panel_book"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="panel_book/MarginContainer"]
layout_mode = 2

[node name="rtl_left" type="RichTextLabel" parent="panel_book/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_jgfn8")
selection_enabled = true

[node name="rtl_right" type="RichTextLabel" parent="panel_book/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_jgfn8")
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="panel_text_edit" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/panel_text_edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="text_edit" type="TextEdit" parent="HBoxContainer/panel_text_edit/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
wrap_mode = 1

[node name="panel_buttons" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/panel_buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="btn_load" type="Button" parent="HBoxContainer/panel_buttons/VBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="btn_save" type="Button" parent="HBoxContainer/panel_buttons/VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="file_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(400, 600)

[connection signal="text_changed" from="HBoxContainer/panel_text_edit/MarginContainer/text_edit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/panel_buttons/VBoxContainer/btn_load" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="HBoxContainer/panel_buttons/VBoxContainer/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="file_selected" from="file_dialog" to="." method="_on_file_dialog_file_selected"]
